tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-at-size-of.wyst
module removed_at_size_of

struct Header {
    magic: u32
}

const BAD: u64 = @size_of(Header)
